# qtcreator-wakatime

./: .gitignore  .travis.yml  CMakeLists.txt  QtCreatorWakatime.json.in  README.md  Wakatime.json.in  cligetter.cpp  cligetter.h  qtcreatorwakatime.pro  vcpkg.json  waka.qrc  waka_constants.h  waka_global.h  waka_options.cpp  waka_options.h  waka_options.ui  waka_options_page.cpp  waka_options_page.h  waka_options_widget.cpp  waka_options_widget.h  waka_plugin.cpp  waka_plugin.h  wakatime.pro  wakatime_constants.h  wakatime_options.ui  wakatime_options_page.cpp  wakatime_options_page.h  wakatime_plugin.cpp  wakatime_plugin.h
.github/workflows/: build.yml  build_cmake.yml  main.yml
cmake/: FindLibreSSL.cmake  SetupOpenSSL.cmake  SetupQuazip.cmake  SetupZLIB.cmake
scripts/: build.sh  download_qtc.sh  install_deps.sh
